<resources>
    <string name="app_name">ZeTube</string>

    <!-- Image content descriptions -->
    <string name="content_description_video_thumbnail">Video Thumbnail</string>
    <string name="content_description_avatar_thumbnail">Channel avatar</string>

    <!-- Messages -->
    <string name="msg_error_sync_failure">
        Something went wrong try again later by manual sync using the button top right corner or
        relaunching the app after killing.
    </string>
    <string name="msg_error_no_video">
        Cannot load the video. Please go back the video feed screen and try again.
    </string>
    <string name="msg_error_generic">
        Error occurred. Please try again later!
    </string>
    <string name="msg_warning_install_google_play_services">
        Please install Google Play Services.
    </string>
    <string name="msg_warning_no_network">The device is offline</string>
    <string name="msg_info_sync_start">
        Preparing your subscription feed. Please wait for a moment!
    </string>
    <string name="msg_info_video_saved">Video is saved.</string>
    <string name="msg_info_video_removed">Video is removed.</string>
    <string name="msg_success_sync_success"> Sync has been completed successfully. </string>
    <string name="msg_permission_get_accounts">
        This app needs to access your Google account (via Contacts) in order to fetch your YouTube
        subscription feed.
    </string>
    <string name="msg_info_loading">Loading…</string>
    <string name="msg_info_empty_result_set">No videos found.</string>
    <string name="msg_info_empty_channel_list">Channel list is empty.</string>
    <string name="msg_info_restart_or_man_sync">
        Please restart the app or press manual sync button at the top of the screen.
    </string>
    <string name="msg_info_sync_not_allowed">
        Sync is allowed once in %1$d hours. Please try again later.
    </string>
    <string name="msg_info_already_syncing">Already syncing.</string>
    <string name="msg_delete_dialog">Do you confirm deleting all of the data?</string>
    <string name="msg_no_data_to_delete">No data to delete.</string>

    <!-- Button texts -->
    <string name="btn_txt_share">Share</string>
    <string name="btn_txt_save">Save</string>
    <string name="btn_txt_remove">Remove</string>
    <string name="btn_txt_confirm">Confirm</string>
    <string name="btn_txt_cancel">Cancel</string>

    <!-- Menu item texts -->
    <string name="menu_item_update_feed">Update Feed</string>
    <string name="menu_item_delete_all">Delete All</string>

    <!-- Navigation Drawer Strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_item_feed">Videos</string>
    <string name="nav_item_channels">Channels</string>
    <string name="nav_item_saved_videos">Saved Videos</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_account">Account</string>
    <string name="nav_item_logout">Logout</string>

    <!-- ChannelDetail ViewPager tab titles -->
    <string name="tab_text_videos">Videos</string>
    <string name="tab_text_description">Description</string>

    <!-- Nav destination labels -->
    <string name="dest_label_videos">Videos</string>
    <string name="dest_label_saved_videos">Saved Videos</string>
    <string name="dest_label_channels">Channels</string>
    <string name="dest_label_settings">Settings</string>

</resources>
