<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor"
    tools:context=".ui.player.PlayerActivity">

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtube_player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_channel_avatar"
        android:layout_width="@dimen/width_item_channel_view_avatar"
        android:layout_height="@dimen/height_item_channel_view_avatar"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:contentDescription="@string/content_description_avatar_thumbnail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/youtube_player_view"
        tools:srcCompat="@tools:sample/avatars[9]" />

    <TextView
        android:id="@+id/tv_video_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_channel_avatar"
        app:layout_constraintTop_toTopOf="@+id/iv_channel_avatar"
        tools:text="This problem seems hard, then it doesn't, but it really is" />

    <TextView
        android:id="@+id/tv_video_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/tv_video_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_video_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_video_title"
        tools:text="Peter McKinnon - 6 hours ago" />

    <Button
        android:id="@+id/btn_share"
        style="@style/ZeTubeTextButton"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/btn_txt_share"
        app:icon="@drawable/ic_share_black_24dp"
        app:iconTint="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_channel_avatar" />

    <Button
        android:id="@+id/btn_save"
        style="@style/ZeTubeTextButton"
        android:text="@string/btn_txt_save"
        android:visibility="gone"
        app:icon="@drawable/ic_playlist_add_black_24dp"
        app:iconTint="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@id/btn_share"
        app:layout_constraintTop_toTopOf="@id/btn_share" />

    <ScrollView
        android:id="@+id/sv_description_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_small"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium"
        android:paddingBottom="@dimen/padding_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintTop_toBottomOf="@+id/btn_share"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_video_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:textIsSelectable="true"
            tools:text="@tools:sample/lorem/random" />

    </ScrollView>

    <TextView
        android:id="@+id/tv_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_error_no_video"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>